--- a/index.html
+++ b/index.html
@@ -6,10 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
    <script src="https://kit.fontawesome.com/c2af92f582.js" crossorigin="anonymous"></script>
+   <link rel="stylesheet" href="assets/css/style.css">
     <title>Rosie</title>
 </head>
 <body>
-    <header></header>
+    <header>
+    <div class="row">
+    <a href="index.html" class="col-md-4 logo">
+    </a>
+        <div class="col-md-8">
+            <div class="row bg-color-name-title">
+                <div class="col heading">
+                <h1 class="name">Rosie Odenkirk</h1>
+                <h2 class="title">Full Stack Developer</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+    </header>
+
+
     <section></section>
     <footer></footer>
 </body>
