--- a/resume.html
+++ b/resume.html
@@ -25,13 +25,13 @@
                 <div class="col">
                 <ul id="nav" class="menucontainer list-inline">
                     <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
-                        <a href="" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i> <span>Home</span></a>
+                        <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i> <span>Home</span></a>
                     </li>
                     <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
-                        <a href="" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
+                        <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
                     </li>
                     <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
-                        <a href="" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
+                        <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
                     </li>
                     <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
                         <a href="" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
@@ -120,25 +120,25 @@
                         <span class="progress-type">HTML/HTML5</span>
                         </div>
                         <div class="progress">
-                        <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
+                        <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
                         <span class="sr-only">80% complete</span>
                         </div>
                         <span class="progress-type">CSS/CSS3</span>
                         </div>
                         <div class="progress">
-                        <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
+                        <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%;">
                         <span class="sr-only">70% complete</span>
                         </div>
                         <span class="progress-type">JavaScript/ jQuery</span>
                         </div>
                         <div class="progress">
-                        <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
+                        <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
                         <span class="sr-only">80% complete</span>
                         </div>
                         <span class="progress-type">Django/ Python</span>
                         </div>
                         <div class="progress">
-                        <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
+                        <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
                         <span class="sr-only">80% complete</span>
                         </div>
                         <span class="progress-type">SQL/ NoSQL</span>
