--- a/interests.html
+++ b/interests.html
@@ -198,5 +198,8 @@
             </div>
             </div>
     </footer>
+    <script>
+    var APIkey = "AIzaSyBLJwlnqSLBghzS8qcQ5Bgq5OwLED4jFbw"
+    </script>
 </body>
 </html>
