added script to make map functional

--- a/interests.html
+++ b/interests.html
@@ -198,8 +198,8 @@
             </div>
             </div>
     </footer>
-    <script>
-    var APIkey = "AIzaSyBLJwlnqSLBghzS8qcQ5Bgq5OwLED4jFbw"
-    </script>
+
+    <script src="/maps/documentation/javascript/examples/markerclusterer/markerclustererplus@4.0.1.min.js"></script>
+    <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLJwlnqSLBghzS8qcQ5Bgq5OwLED4jFbw&callback=initMap"></script>
 </body>
 </html>
