--- a/interests.html
+++ b/interests.html
@@ -198,7 +198,17 @@
             </div>
             </div>
     </footer>
-
+    <script>
+    function initMap() {
+        var map = new google.maps.Map(document.getElementById("map"),{
+            zoom:3,
+            center:{
+                lat: 46.619261,
+                lng: -33.134766
+            }
+        });
+    }
+    </script>
     <script src="/maps/documentation/javascript/examples/markerclusterer/markerclustererplus@4.0.1.min.js"></script>
     <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLJwlnqSLBghzS8qcQ5Bgq5OwLED4jFbw&callback=initMap"></script>
 </body>
