--- a/interests.html
+++ b/interests.html
@@ -209,7 +209,7 @@
         });
     }
     </script>
-    <script src="/maps/documentation/javascript/examples/markerclusterer/markerclustererplus@4.0.1.min.js"></script>
+    <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
     <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLJwlnqSLBghzS8qcQ5Bgq5OwLED4jFbw&callback=initMap"></script>
 </body>
 </html>
